# cse565

./: Makefile  main.cpp  sort.hpp  test.cpp  test_output_full.result  thesis.bib
a1/: CMakeLists.txt  JEREMY_WRIGHT_A1.tex  sort.hpp  test_output.result
a2/: JEREMY_WRIGHT_A2.tex  Makefile  Testing.bib  guitar_tone.pict  guitar_tone.tests
a3/: JEREMY_WRIGHT_A3.tex  Makefile  broken.cppcheck  bullseye_coverage_commands.sh  cpp_fixed_result  cppcheck_test_code.c  cppcheck_test_code_fixed.c  create_bad_condition.cpp  q.test.before.cpp  sort.hpp  sort_broken.hpp
a4/: JEREMY_WRIGHT_A4.tex  Makefile  Testing.bib  run_callgrind.sh  run_performance_tests.sh  test.cpp  test_detail.xml
